# PruebasAWS

./: .gitignore  LICENSE  README.md
HelloWorld/: README.md  samconfig.toml  template.yaml
HelloWorld/events/: event.json
HelloWorld/hello_world/: app.py
ingestiotrustsam/: README.md  template.yaml
ingestiotrustsam/rust_app/: Cargo.toml
iotIngestLambdaRust/: Cargo.toml  README.md  docker-compose.yml
iotIngestLambdaRust/cdk/: cdk.context.json  package-lock.json  package.json
iotIngestLambdaRust/cdk/lib/: cdk-stack.ts  config.ts
iotIngestLambdaRust/common_lib/: Cargo.toml
iotIngestLambdaRust/common_lib/src/: lib.rs
iotIngestLambdaRust/iot_ingest/: Cargo.toml
iotIngestLambdaRust/iot_ingest/src/: configuration.rs  lib.rs
iotIngestLambdaRust/iot_ingest/src/database/: db_handler.rs  mod.rs  s3_handler.rs
iotIngestLambdaRust/iot_ingest/src/handlers/: mod.rs  sqs_handler.rs
iotIngestLambdaRust/iot_ingest/src/services/: sensor_service.rs
iotIngestLambdaRust/mysql/: init.sql
iotIngestLambdaRust/notifications/: Cargo.toml  README.md
iotIngestLambdaRust/notifications/src/: configuration.rs  event_handler.rs  lib.rs
iotIngestLambdaRust/notifications/src/database/: db_handler.rs
iotIngestLambdaRust/src/: configuration.rs  lib.rs  main.rs  utilities.rs
iotIngestLambdaRust/test/: s3-device-location-metric.json  sqs-multiple-msg-event.json  sqs-single-msg-event.json
