[package]
name = "iotIngestLambdaRust"
version = "0.1.0"
edition = "2021"

[dependencies]
aws_lambda_events = { version = "0.15.1", default-features = false, features = ["sqs"] }

lambda_runtime = "0.13.0"
tokio = { version = "1", features = ["macros"] }
chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing-subscriber = { version = "0.3", features = ["fmt", "json"] }
sqlx = { version = "0.8.5", features = ["runtime-tokio", "mysql", "chrono"] }
hex = "0.4"