[package]
name = "common_lib"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = {version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8.5", features = ["runtime-tokio", "mysql", "chrono"] }
tracing = "0.1"
tracing-subscriber = "0.3"