[package]
name = "iot_ingest"
version = "0.1.0"
edition = "2021"

[dependencies]
aws_lambda_events = { version = "0.15.1", default-features = false, features = ["sqs"] }
lambda_runtime = "0.13.0"
tokio = { version = "1", features = ["macros"] }
serde = { version = "1.0", features = ["derive"] }
futures = "0.3"
serde_json = "1.0"
aws-sdk-s3 = "1"
aws-config = {version = "1", features = ["behavior-version-latest"]}
chrono = "0.4"
sqlx = { version = "0.8.5", features = ["runtime-tokio", "mysql", "chrono"] }
hex = "0.4"
common_lib = { path = "../common_lib" }

[[bin]]
name = "iot_ingest"
path = "src/bin/iot_ingest.rs"

# [profile.release]
# panic = 'abort'