[package]
name = "notifications"
version = "0.1.0"
edition = "2021"

[dependencies]
aws_lambda_events = { version = "0.15.1", default-features = false, features = ["sqs"] }

common_lib = { path = "../common_lib" }

lambda_runtime = "0.13.0"
tokio = { version = "1", features = ["macros"] }

[[bin]]
name = "notifications"
path = "src/bin/notifications.rs"
