[package]
name = "notifications"
version = "0.1.0"
edition = "2021"

[dependencies]
aws_lambda_events = { version = "0.15.1", default-features = false, features = ["sqs"] }

common_lib = { path = "../common_lib" }

lambda_runtime = "0.13.0"
tokio = { version = "1", features = ["macros"] }
aws-config = {version = "1", features = ["behavior-version-latest"]}
sqlx = { version = "0.8.5", features = ["runtime-tokio", "mysql", "chrono"] }
aws-sdk-ses = "1.73.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"


[[bin]]
name = "notifications"
path = "src/bin/notifications.rs"
